Fix weird z-index issues.
Rip everything apart because the background was hiding some buttons...

--- a/css/main.css
+++ b/css/main.css
@@ -34,13 +34,23 @@ body {
     top: 25%;
 }
 
+
+.backgrounds {
+    z-index: 0;
+    position: fixed;
+    width:100%;
+    height: 100%;
+}
+
+
 #body {
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
 }
+
 
 #cardModalBody {
     height: 100%;
@@ -54,7 +64,6 @@ body {
     color: var(--theme-primary-inverse);
     -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
-    z-index: 7;
 }
 
 .testGrp, #leftGrp, #rightGrp {
@@ -252,9 +261,9 @@ a:hover:not(#executeButton) {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 8;
     width: 100%;
     height: 100%;
+    z-index:7;
 }
 
 #sideMenu {
@@ -262,8 +271,8 @@ a:hover:not(#executeButton) {
     width: 350px;
     height: 100%;
     position: fixed;
+    z-index: 8;
     top: 0;
-    z-index: 9;
     left: -352px;
     word-break: break-word;
     overflow-y: scroll;
@@ -324,7 +333,6 @@ a:hover:not(#executeButton) {
 }
 
 .navIcon {
-    z-index: 8;
     height: 54px;
     width: 54px;
     cursor: pointer;
@@ -419,15 +427,6 @@ html {
     background-image: linear-gradient(to bottom, #0d6fc3 0, #2e6da4 100%);
 }
 
-#holder {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -6;
-}
-
 ::-webkit-scrollbar {
     width: 0; /* remove scrollbar space */
     background: transparent; /* optional: just make scrollbar invisible */
@@ -442,7 +441,6 @@ html {
 
 .cardClose {
     color: var(--theme-primary-inverse);
-    z-index: 6;
     background: transparent;
     border: none;
     position: absolute;
@@ -452,7 +450,6 @@ html {
 
 .deviceDelete {
     color: var(--theme-primary-inverse);
-    z-index: 6;
     background: transparent;
     border: none;
     position: absolute;
@@ -465,7 +462,6 @@ html {
     top: 3px;
     position: absolute;
     color: var(--theme-primary-inverse);
-    z-index: 6;
     background: transparent;
     border: none;
     width: 25px;
@@ -518,7 +514,6 @@ html {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 0;
 }
 
 .scrollContainer {
@@ -555,7 +550,6 @@ html {
     width: 100%;
     text-align: center;
     top: 20px;
-    z-index: 8;
 }
 
 #stopBtnDiv {
@@ -732,11 +726,11 @@ p.card-subtitle {
 
 #plexClient {
     position: fixed;
-    z-index: 9;
     top: 75px;
     right: 5px;
     max-width: 250px;
     display: none;
+    z-index: 8;
     background: var(--theme-primary);
 }
 
@@ -752,7 +746,6 @@ p.card-subtitle {
 }
 
 #plexClient, .dropdown-header, #clientWrapper {
-    z-index: 9;
     text-transform: uppercase;
 }
 
@@ -778,7 +771,6 @@ p.card-subtitle {
     height: 58%;
     top: 30px;
     right: 12px;
-    z-index: 8;
 }
 
 #controlWrap {
@@ -802,7 +794,6 @@ p.card-subtitle {
     height: 100%;
     padding-right: 0;
     padding-left: 0;
-    z-index: 6;
 }
 
 .statusWrapper {
@@ -833,7 +824,6 @@ p.card-subtitle {
     background-position: center center;
     background-size: cover;
     pointer-events: none;
-    z-index: 4;
 }
 
 .coverImage {
@@ -852,7 +842,6 @@ p.card-subtitle {
     position: fixed;
     left: 0;
     pointer-events: none;
-    z-index: 3;
 }
 
 .queryWrap {
@@ -1008,7 +997,6 @@ p.card-subtitle {
 }
 
 .nowPlayingFooter {
-    z-index: 7;
     width: 100%;
     height: 115px;
     position: fixed;
@@ -1299,7 +1287,6 @@ span.toggle {
 }
 
 #results {
-    z-index: 6;
     top: -5000px;
     height: calc(100% - 42px);
     left: 0;
@@ -1331,7 +1318,6 @@ span.toggle {
 
 .castArt {
     display: none;
-    z-index: 5;
     margin: 0;
     overflow: hidden;
     position: fixed;
@@ -1390,12 +1376,17 @@ span.toggle {
     font: 300 24px 'Roboto';
 }
 
+#bgwrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 #weatherDiv {
     position: fixed;
     bottom: 35px;
     right: 13px;
     text-align: right;
-    z-index: 0;
     mix-blend-mode: difference;
     color: var(--theme-primary-inverse);
 }
